--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13097],[],[[4,0,1,0,[],[1,227,12868],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,37843],[],[[4,0,1,0,[],[1,230,37611],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Chrome","*E:\\Workplace\\Python\\testRobot\\TestSuites\\TestChrome\\chrome.robot","*../TestSuites/TestChrome/chrome.robot","*Test1"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Chrome","*E:\\github.com\\jiaoruohong\\testRobot\\TestSuites\\TestChrome\\chrome.robot","*../TestSuites/TestChrome/chrome.robot","*Test1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Chrome","name":"Chrome","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Chrome","name":"Chrome","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1591100373574;
+window.output["baseMillis"] = 1591100811945;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13108;
+window.output["generated"] = 37863;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
